--- a/DiscordNetHelper/DiscordNetHelper.csproj
+++ b/DiscordNetHelper/DiscordNetHelper.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>TehGM.DiscordNetHelper</RootNamespace>
+    <RootNamespace>TehGM.DiscordBot</RootNamespace>
     <Authors>TehGM</Authors>
     <Description>A small personal use library working on top of Discord.NET. Shared code used across bot projects.</Description>
     <RepositoryUrl>https://github.com/TehGM/DiscordNetHelper</RepositoryUrl>
@@ -31,6 +31,10 @@
     <PackageReference Include="Discord.Net" Version="2.0.1" />
     <PackageReference Include="NAudio" Version="1.9.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="CommandsProcessing\" />
   </ItemGroup>
 
 </Project>
