--- a/DiscordNetHelper/DiscordNetHelper.csproj
+++ b/DiscordNetHelper/DiscordNetHelper.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>TehGM.DiscordBot</RootNamespace>
+    <RootNamespace>TehGM.DiscordNetBot</RootNamespace>
     <Authors>TehGM</Authors>
     <Description>A small personal use library working on top of Discord.NET. Shared code used across bot projects.</Description>
     <RepositoryUrl>https://github.com/TehGM/DiscordNetHelper</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
     <NeutralLanguage>en-GB</NeutralLanguage>
     <Copyright>Copyright (c) 2019 TehGM</Copyright>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
