--- a/DiscordNetHelper/DiscordNetHelper.csproj
+++ b/DiscordNetHelper/DiscordNetHelper.csproj
@@ -7,16 +7,21 @@
     <Description>A small personal use library working on top of Discord.NET. Shared code used across bot projects.</Description>
     <RepositoryUrl>https://github.com/TehGM/DiscordNetHelper</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
-    <Version>2.0.1</Version>
+    <Version>2.0.2</Version>
     <NeutralLanguage>en-GB</NeutralLanguage>
     <Copyright>Copyright (c) 2019 TehGM</Copyright>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="libs\**" />
     <EmbeddedResource Remove="libs\**" />
     <None Remove="libs\**" />
+    <None Include="..\LICENSE.md">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
